Changed the styling of Filter Review SEction

--- a/FilterReview/index.html
+++ b/FilterReview/index.html
@@ -32,21 +32,6 @@
 <script type="text/javascript" src="../Libraries/Plotly_helpers.js"></script>
 <script type="text/javascript" src="../Libraries/LogHelpers.js"></script>
 
-</head>
-<table style="width:1200px"><tr><td>
-    <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
-</td><td>
-    <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
-    <br>
-    <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
-</td></tr></table>
-
-<table><tr><td style="width:1200px">
-<h1 style="text-align:center; margin-block-end: 0.25em;"><a href="" style="color: #000000; text-decoration:none;">ArduPilot Filter Review Tool</a></h1>
-</td></tr></table>
-
-<body>
-
 <style>
     div.plotly-notifier {
         visibility: hidden;
@@ -55,7 +40,52 @@
     .tippy-box {
         font-size: 20px;
     }
+    header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    background-color: #004080;
+    color: white;
+    }
+    header a {
+    color: #e7f3ff; 
+    text-decoration: none;
+    font-size: 30px; 
+    display: flex; 
+    align-items: center; 
+    } 
+    header a img { 
+    margin-right: 10px; 
+    height: 50px; 
+    }
+    footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #004080;
+    color: white;
+    margin-top: 30px;
+    margin-left: -150px;
+    margin-right: -150px;
+    margin-bottom: -30px;
+    }
+    body{
+        background-color: #e7f3ff;
+    }
 </style>
+
+</head>
+<body>
+
+    <header>
+        <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+          <a href="https://github.com/ArduPilot/WebTools">
+            <img src="../images/github-mark.png" alt="GitHub Logo">
+            <span>GitHub</span>
+          </a>
+    </header>
+
+    <h1 style="text-align:center; margin-block-end: 0.25em;"><a href="" style="color: #000000; text-decoration:none;">ArduPilot Filter Review Tool</a></h1>
 
 <p style="width:1150px; text-align:justify; padding-left:30px; margin-block-start: 0; margin-block-end: 0.5em;">
 This tool takes a .bin log with either batch samples or raw IMU samples and display the noise spectrum present before and after any filtering. To setup the logging required by this tool see: <a href="https://ardupilot.org/copter/docs/common-raw-imu-logging.html">Raw IMU Logging setup</a>. It also estimates the post filter noise spectrums WOULD be if the filter parameters are changed.
@@ -174,6 +204,7 @@ These params can then be saved and loaded into the autopilot without the need fo
         data-tippy-maxWidth='750px'/>
     </h2>
 </td></tr></table>
+
 
 <table>
     <tr>
@@ -340,7 +371,11 @@ These params can then be saved and loaded into the autopilot without the need fo
     </tr>
 </table>
 
+<br><br>
+
 <div id="FFTPlot" style="width:1200px;height:450px"></div>
+
+<br><br>
 
 <table>
     <tr>
@@ -414,6 +449,7 @@ These params can then be saved and loaded into the autopilot without the need fo
         </td>
     </tr>
 </table>
+
 
 <table><tr><td style="width:1200px">
     <h2 style="text-align:center">Filter Configuration
@@ -537,7 +573,10 @@ These params can then be saved and loaded into the autopilot without the need fo
     </h2>
 </td></tr></table>
 
+
 <div id="Spectrogram" style="width:1200px;height:450px"></div>
+
+<br><br>
 
 <table>
     <tr>
@@ -612,6 +651,7 @@ These params can then be saved and loaded into the autopilot without the need fo
 </table>
 
 
+
 <table><tr><td style="width:1200px">
 <h2 style="text-align:center">Frequency Response of Filters
     <img id="TT" src="../images/question-circle.svg" style="width: 1em; vertical-align: bottom" 
@@ -621,6 +661,8 @@ These params can then be saved and loaded into the autopilot without the need fo
 </td></tr></table>
 
 <div id="Bode" style="width:1200px;height:900px"></div>
+
+<br><br>
 
 <table>
     <tr>
@@ -658,7 +700,9 @@ These params can then be saved and loaded into the autopilot without the need fo
     </tr>
 </table>
 
-
+<footer>
+    &copy; 2025 ArduPilot. All Rights Reserved.
+</footer>
 
 </body>
 
