Changed the styling of RotationCheck  Section

--- a/RotationCheck/index.html
+++ b/RotationCheck/index.html
@@ -10,24 +10,57 @@
 
 <script src='../modules/plotly.js/dist/plotly.min.js'></script>
 
-</head>
-<table style="width:1200px"><tr><td>
-  <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
-</td><td>
-  <a href="https://github.com/ArduPilot/WebTools"><img src="../images/github-mark.png" style="width:60px"></a>
-  <br>
-  <a href="https://github.com/ArduPilot/WebTools"><img src="../images/GitHub_Logo.png" style="width:60px"></a>
-</td></tr></table>
-
 <style>
   div.plotly-notifier {
-    visibility: hidden;
+      visibility: hidden;
+  }
+  header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: #004080;
+  color: white;
+  }
+  header a {
+  color: #e7f3ff; 
+  text-decoration: none;
+  font-size: 30px; 
+  display: flex; 
+  align-items: center; 
+  } 
+  header a img { 
+  margin-right: 10px; 
+  height: 50px; 
+  }
+  footer {
+  text-align: center;
+  padding: 20px;
+  background-color: #004080;
+  color: white;
+  margin-top: 30px;
+  margin-left: -150px;
+  margin-right: -150px;
+  margin-bottom: -30px;
+  }
+  body{
+      background-color: #e7f3ff;
   }
 </style>
 
-<h1><a href="" style="color: #000000; text-decoration:none;padding-left:10px;">ArduPilot Rotation Check</a></h1>
+</head>
 
 <body onload="reset(); update()">
+
+  <header>
+    <a href="https://ardupilot.org"><img src="../images/ArduPilot.png"></a>
+      <a href="https://github.com/ArduPilot/WebTools">
+        <img src="../images/github-mark.png" alt="GitHub Logo">
+        <span>GitHub</span>
+      </a>
+</header>
+
+  <h1><a href="" style="color: #000000; text-decoration:none;padding-left:10px;">ArduPilot Rotation Check</a></h1>
 
 <p style="width:1100px; text-align:justify; padding-left:10px; margin-block-start: 0; margin-block-end: 0.5em;">
 
@@ -51,6 +84,10 @@
 <div style="width:1200px;">
 <div id="plot" style="width:1000px;height:800px;padding-left:50px;"></div>
 </div>
+
+<footer>
+  &copy; 2025 ArduPilot. All Rights Reserved.
+</footer>
 
 <script>
 
