Updated the missing description and improper styling

--- a/LogFinder/index.html
+++ b/LogFinder/index.html
@@ -30,6 +30,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  margin-top: -10px;
+  margin-left: -10px;
+  margin-right: -10px;
   background-color: #004080;
   color: white;
   }
@@ -49,13 +52,13 @@
   padding: 20px;
   background-color: #004080;
   color: white;
-  margin-top: 420px;
-  margin-left: -150px;
-  margin-right: -150px;
-  margin-bottom: -30px;
+  margin-top: 390px;
+  margin-left: -10px;
+  margin-right: -10px;
+  margin-bottom: -10px;
   }
   body{
-      background-color: #e7f3ff;
+      background-color: #f8fafc;
   }
 </style>
 
