--- a/AnalyticTune/index.html
+++ b/AnalyticTune/index.html
@@ -31,6 +31,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
     background-color: #004080;
     color: white;
   }
@@ -53,9 +56,12 @@
     background-color: #004080;
     color: white;
     margin-top: 30px;
+    margin-bottom: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
   }
   body{
-    background-color: #e7f3ff;
+    background-color: #f8faf7;
   }
 </style>
 
