--- a/Dev/index.html
+++ b/Dev/index.html
@@ -10,7 +10,8 @@
     font-family: Arial, sans-serif; 
     margin: 0; 
     padding: 0; 
-    background-color: #e7f3ff; color: #333; 
+    background-color: #f8faf7; 
+    color: #333; 
     }
     header {
     display: flex;
@@ -80,6 +81,9 @@
     background-color: #004080;
     color: white;
     margin-top: 30px;
+    margin-left: -113px;
+    margin-right: -113px;
+    margin-bottom: -20px;
   }
 </style>     
 </head>
