--- a/HardwareReport/index.html
+++ b/HardwareReport/index.html
@@ -27,6 +27,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
     background-color: #004080;
     color: white;
     }
@@ -46,12 +49,13 @@
     padding: 20px;
     background-color: #004080;
     color: white;
-    margin-top: 500px;
-    margin-left: -150px;
-    margin-right: -150px;
+    margin-top: 470px;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: -10px;
     }
     body{
-        background-color: #e7f3ff;
+        background-color: #f8fafc;
     }
 </style>
 
