--- a/MAGFit/index.html
+++ b/MAGFit/index.html
@@ -37,6 +37,9 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    margin-top: -10px;
+    margin-left: -10px;
+    margin-right: -10px;
     background-color: #004080;
     color: white;
     }
@@ -57,12 +60,12 @@
     background-color: #004080;
     color: white;
     margin-top: 30px;
-    margin-left: -150px;
-    margin-right: -150px;
-    margin-bottom: -30px;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: -10px;
     }
     body{
-        background-color: #e7f3ff;
+        background-color: #f8fafc;
     }
 </style>
 
