--- a/ThrustExpo/index.html
+++ b/ThrustExpo/index.html
@@ -30,6 +30,9 @@
             justify-content: space-between;
             align-items: center;
             padding: 20px;
+            margin-top: -10px;
+            margin-left: -10px;
+            margin-right: -10px;
             background-color: #004080;
             color: white;
             }
@@ -50,12 +53,12 @@
             background-color: #004080;
             color: white;
             margin-top: 30px;
-            margin-left: -150px;
-            margin-right: -150px;
-            margin-bottom: -30px;
+            margin-left: -10px;
+            margin-right: -10px;
+            margin-bottom: -10px;
             }
             body{
-                background-color: #e7f3ff;
+                background-color: #f8faf7;
             }
         </style>
 
@@ -69,7 +72,7 @@
                 <span>GitHub</span>
               </a>
           </header>
-
+          
         <h1>
             <a href=""> ArduPilot Thrust Expo </a>
         </h1>
@@ -84,7 +87,7 @@
             not chase a perfect fit. Rather, focus on midrange throttle
             linearity.
         </div>
-        
+
         <div class="content">
             <table><tr><td>
             <fieldset>
