Dev: add Chat link including icon

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -108,6 +108,17 @@ The tools on this page are either developer focused, or a work in progress, they
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="../Chat" style="margin: 20px; display: inline-block;"><img src="../images/Chat_Icon.png" style="width:200px"></a>
+    </td>
+    <td style="text-align:left; vertical-align:top; max-width:960px;">
+      <h2>Chat</h2>
+      OpenAI Chat module
+      Use an AI chat to control your vehicle
+    </td>
+  </tr>
+
 </table>
 
 </body>
